// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runGem2s action Dispatches events properly 1`] = `
Array [
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusLoading",
  },
  Object {
    "payload": Object {},
    "type": "experimentSettings/startPipeline",
  },
]
`;

exports[`runGem2s action Dispatches status error if loading fails 1`] = `
Array [
  Object {
    "payload": Object {
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusLoading",
  },
  Object {
    "payload": Object {
      "error": "Could not start gem2s. some weird error that happened",
      "experimentId": "experiment-id",
    },
    "type": "backendStatus/backendStatusError",
  },
]
`;
